--- a/sandbox/build.gradle
+++ b/sandbox/build.gradle
@@ -1,3 +1,12 @@
 apply plugin: 'java'
 apply plugin: 'application'
 mainClassName = 'MyFirstProgram'
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    // https://mvnrepository.com/artifact/org.testng/testng
+    testImplementation 'org.testng:testng:7.1.0'
+}
